logout button ui implemented and fixed styling issues

--- a/QuickBite/Views/Shared/_CustomerDashboardLayout.cshtml
+++ b/QuickBite/Views/Shared/_CustomerDashboardLayout.cshtml
@@ -125,7 +125,7 @@
             </div>
         </div>
                 <div class="">
-            <form class="inline" asp-area="Identity" asp-page="/Account/Logout" asp-route-returnUrl="@Url.Action("Index", "Home", new { area = "" })">
+                    <form class="inline" >
                 <button type="submit" class=" flex items-center gap-2 link border border-gray-200 rounded-10 py-4 px-2 w-full duration-300 hover:opacity-70">
                             <img src="~/icons/logout.png" class="w-7 "/>
                             <span class="logout_link_word ">Logout</span>
