--- a/QuickBite/Views/Dashboard/Index.cshtml
+++ b/QuickBite/Views/Dashboard/Index.cshtml
@@ -1,7 +1,7 @@
 @using QuickBite.Controllers
 @{
-    ViewData["Title"] = "Dashboard";
-    Layout = "_CustomerDashboardLayout";
+ViewData["Title"] = "Dashboard";
+Layout = "_CustomerDashboardLayout";
 }
 
 <div class="flex flex-col w-full h-full">
@@ -20,10 +20,10 @@
                     <span class=""> John Doe </span>
                 </div>
             </div>
-            
         </div>
-        
     </div>
+
+    <!-- Get the Best of the Best Section (No change here) -->
     <div class="px-4 pt-10">
         <div class="">
             <h1 class="font-bold text-3xl">Get the Best of the Best</h1>
@@ -51,116 +51,37 @@
             </div>
         </div>
     </div>
+
     <div class="px-4 pt-10">
-        <div class="">
-            <h1 class="font-bold text-3xl">Resturants Of The Day!</h1>
-            <div class="flex justify-start items-center gap-4 mt-4">
-                <div class="flex flex-col justify-center items-center ">
-                    <div>
-                        <img src="~/img/burger.png" class="w-full" />
-                    </div>
-                    <div class="flex justify-between w-full gap-2 mt-4">
-                        <div class="flex flex-col gap-2">
-                            <h2 class="text-gray-700 font-semibold text-lg">Large Burger</h2>
-                            <div class="flex items-center gap-1">
-                                <span class="text-gray-700 text-sm font-semibold">Delivery Time</span>
-                                <span class="text-gray-700 text-sm font-semibold">•</span>
-                                <span class="text-gray-700 text-sm font-semibold">12 mins</span>
-                            </div>
-                            <span class="text-gray-700 text-sm font-semibold">$0 CA Delivery Fee</span>
-                        </div>
-                        <div class="h-full flex flex-col gap-4 items-center justify-between">
-                            <div>
-                                <img src="~/icons/heart.png" class="w-full" />
-                            </div>
-                            <div>
-                                <img src="~/icons/addCart.png" class="w-full" />
-                            </div>
-                        </div>
-                        
-                    </div>
-                    
+        <h1 class="font-bold text-3xl">Restaurants Of The Day!</h1>
+        <div class="flex justify-start items-center gap-4 mt-4">
+            @foreach (var item in Model)
+            {
+            <div class="flex flex-col justify-center items-center">
+                <div class="mt-2">
+                    <img src="@item.Photo" class="w-full h-[100px]" />
                 </div>
-                <div class="flex flex-col justify-center items-center ">
-                    <div>
-                        <img src="~/img/shwarma.png" class="w-full" />
-                    </div>
-                    <div class="flex justify-between w-full gap-2 mt-4">
-                        <div class="flex flex-col gap-2">
-                            <h2 class="text-gray-700 font-semibold text-lg">Shawarma</h2>
-                            <div class="flex items-center gap-1">
-                                <span class="text-gray-700 text-sm font-semibold">Delivery Time</span>
-                                <span class="text-gray-700 text-sm font-semibold">•</span>
-                                <span class="text-gray-700 text-sm font-semibold">9 mins</span>
-                            </div>
-                            <span class="text-gray-700 text-sm font-semibold">$3 CA Delivery Fee</span>
+                <div class="flex justify-between w-full gap-2 mt-4">
+                    <div class="flex flex-col gap-2">
+                        <h2 class="text-gray-700 font-semibold text-lg">@item.Name</h2>
+                        <div class="flex items-center gap-1">
+                            <span class="text-gray-700 text-sm font-semibold">Delivery Time</span>
+                            <span class="text-gray-700 text-sm font-semibold">ï¿½</span>
+                            <span class="text-gray-700 text-sm font-semibold">10 mins</span>
                         </div>
-                        <div class="h-full flex flex-col gap-4 items-center justify-between">
-                            <div>
-                                <img src="~/icons/heart.png" class="w-full" />
-                            </div>
-                            <div>
-                                <img src="~/icons/addCart.png" class="w-full" />
-                            </div>
-                        </div>
-
+                        <span class="text-gray-700 text-sm font-semibold">$@item.Price</span>
                     </div>
-
-                </div>
-                <div class="flex flex-col justify-center items-center ">
-                    <div>
-                        <img src="~/img/sushi.png" class="w-full" />
-                    </div>
-                    <div class="flex justify-between w-full gap-2 mt-4">
-                        <div class="flex flex-col gap-2">
-                            <h2 class="text-gray-700 font-semibold text-lg">Sushi</h2>
-                            <div class="flex items-center gap-1">
-                                <span class="text-gray-700 text-sm font-semibold">Delivery Time</span>
-                                <span class="text-gray-700 text-sm font-semibold">•</span>
-                                <span class="text-gray-700 text-sm font-semibold">20 mins</span>
-                            </div>
-                            <span class="text-gray-700 text-sm font-semibold">$6 CA Delivery Fee</span>
+                    <div class="h-full flex flex-col gap-4 items-center justify-between">
+                        <div>
+                            <img src="~/icons/heart.png" class="w-full" />
                         </div>
-                        <div class="h-full flex flex-col gap-4 items-center justify-between">
-                            <div>
-                                <img src="~/icons/heart.png" class="w-full" />
-                            </div>
-                            <div>
-                                <img src="~/icons/addCart.png" class="w-full" />
-                            </div>
+                        <div>
+                            <img src="~/icons/addCart.png" class="w-full" />
                         </div>
-
                     </div>
-
-                </div>
-                <div class="flex flex-col justify-center items-center ">
-                    <div>
-                        <img src="~/img/burger.png" class="w-full" />
-                    </div>
-                    <div class="flex justify-between w-full gap-2 mt-4">
-                        <div class="flex flex-col gap-2">
-                            <h2 class="text-gray-700 font-semibold text-lg">Tacos</h2>
-                            <div class="flex items-center gap-1">
-                                <span class="text-gray-700 text-sm font-semibold">Delivery Time</span>
-                                <span class="text-gray-700 text-sm font-semibold">•</span>
-                                <span class="text-gray-700 text-sm font-semibold">10 mins</span>
-                            </div>
-                            <span class="text-gray-700 text-sm font-semibold">$1 CA Delivery Fee</span>
-                        </div>
-                        <div class="h-full flex flex-col gap-4 items-center justify-between">
-                            <div>
-                                <img src="~/icons/heart.png" class="w-full" />
-                            </div>
-                            <div>
-                                <img src="~/icons/addCart.png" class="w-full" />
-                            </div>
-                        </div>
-
-                    </div>
-
                 </div>
             </div>
+            }
         </div>
     </div>
-    
 </div>
