--- a/QuickBite/wwwroot/css/site.css
+++ b/QuickBite/wwwroot/css/site.css
@@ -787,7 +787,7 @@ html {
 .w-half{
     width:50% !important;
 }
-.w-1/4{
+.w-14{
     width:25% !important;
 }
 .rounded-10{
@@ -902,4 +902,7 @@ html {
 }
 .active_dashboard_link{
 
+}
+.red-heart {
+  filter: invert(27%) sepia(76%) saturate(6651%) hue-rotate(350deg) brightness(93%) contrast(104%);
 }
