--- a/QuickBite/Views/Home/Index.cshtml
+++ b/QuickBite/Views/Home/Index.cshtml
@@ -26,7 +26,7 @@
             </div>
 
             <div class="px-4">
-                <form class="relative" asp-action="RedirectToDashboard">
+                <form class="relative" asp-action="Index" asp-controller="Dashboard">
                     <img src="~/icons/location.svg" alt="location pinpoint" class='w-5 h-5 sm:w-10 sm:h-10 absolute top-1/2 left-3 transform -translate-y-1/2 svg-orange'/>
                     <input required name="address" type="text" class="w-[350px] sm:w-[400px] md:w-[600px] py-5 pl-12 sm:pl-14 pr-12 rounded-full text-lg focus:outline-none" placeholder='Enter your address'/>
                     <button type="submit" class='absolute top-1/2 right-3 transform -translate-y-1/2 flex justify-center items-center p-2 rounded-full bg-orange'>
