--- a/QuickBite/Views/Shared/_Layout.cshtml
+++ b/QuickBite/Views/Shared/_Layout.cshtml
@@ -15,22 +15,20 @@
 </head>
 <body class="mb-0">
 
-<header class='absolute left-0 top-0 z-10 w-full'>
-    <nav class="flex items-center justify-between py-3 px-4 sm:px-10 w-full">
-        <div class="w-full flex justify-start md:ml-[100px] md:justify-center" style="margin-left:450px;">
-            <div class="">
-                <a href="/" class='flex gap-1 items-center'>
-                    <img src="~/icons/qbLogo.svg" alt="quickbite logo" width="100" height="100" class=''/>
-                    <div class="hidden sm:flex items-center text-[25px]">
+    <header class='absolute left-0 top-0 z-10 w-full'>
+        <nav class="flex items-center justify-between py-3 px-4 sm:px-10 w-full">
+            <div class="w-full flex justify-start md:ml-[100px] md:justify-center" style="margin-left:450px;">
+                <a href="/" class='flex gap-2 items-center'>
+                    <img src="~/icons/qbLogo.svg" alt="quickbite logo" width="100" height="100" class='' />
+                    <div class="hidden sm:flex items-center text-[25px] gap-1">
                         <h1 class='font-bold text-white'>Quick</h1>
                         <span class='text-yellow font-bold'>Bite</span>
                     </div>
                 </a>
             </div>
-        </div>
-        <partial name="_LoginPartial" />
-    </nav>
-</header>
+            <partial name="_LoginPartial" />
+        </nav>
+    </header>
 
     <div class="">
         <main role="main" >
