--- a/QuickBite/Views/Shared/_RestaurantLayout.cshtml
+++ b/QuickBite/Views/Shared/_RestaurantLayout.cshtml
@@ -36,7 +36,7 @@
                            class="text-lg font-medium text-gray-300 hover:text-yellow-400 transition-colors duration-200">
                             <i class="fas fa-shopping-cart mr-2"></i>Orders
                         </a>
-                        <a href="@Url.Action("Index", "Settings", new { area = "Restaurant" })"
+                        <a href="@Url.Action("Index", "RestaurantSettings", new { area = "Restaurant" })"
                            class="text-lg font-medium text-gray-300 hover:text-yellow-400 transition-colors duration-200">
                             <i class="fas fa-cog mr-2"></i>Settings
                         </a>
