--- a/QuickBite/Views/Dashboard/Checkout.cshtml
+++ b/QuickBite/Views/Dashboard/Checkout.cshtml
@@ -50,7 +50,12 @@
                 <input asp-for="Phone" class="w-full p-3 border border-gray-300 rounded-md shadow-sm focus:outline-none focus:ring-2 focus:ring-indigo-500" />
                 <span asp-validation-for="Phone" class="text-sm text-red-500"></span>
             </div>
-
+            <div>
+                <label asp-for="OrderNotes" class="block text-gray-700">Phone</label>
+                <textarea asp-for="OrderNotes" class="w-full p-3 border border-gray-300 rounded-md shadow-sm focus:outline-none focus:ring-2 focus:ring-indigo-500" ></textarea>
+                <span asp-validation-for="OrderNotes" class="text-sm text-red-500"></span>
+            </div>
+            
             <div class="mt-6">
                 <button type="submit" class="px-4 py-2 bg-indigo-600 text-white rounded-md hover:bg-indigo-700 focus:outline-none">Submit</button>
             </div>
