user order and order details dynamic

--- a/QuickBite/Views/Shared/_CustomerDashboardLayout.cshtml
+++ b/QuickBite/Views/Shared/_CustomerDashboardLayout.cshtml
@@ -69,7 +69,10 @@
                     </a>
                 </div>
                 <div>
-                    <a asp-controller="Dashboard" asp-action="Orders" class="flex items-center gap-4 duration-300 hover:opacity-70 link">
+                    @{
+                        var customerId = Context.Session.GetString("CustomerId");
+                    }
+                    <a asp-controller="Dashboard" asp-action="Orders" asp-route-customerId="@Guid.Parse(customerId)" class="flex items-center gap-4 duration-300 hover:opacity-70 link">
                         <svg width="30" height="30" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
                             <g id="SVGRepo_bgCarrier" stroke-width="0"></g>
                             <g id="SVGRepo_tracerCarrier" stroke-linecap="round" stroke-linejoin="round"></g>
