--- a/QuickBite/Views/Dashboard/Checkout.cshtml
+++ b/QuickBite/Views/Dashboard/Checkout.cshtml
@@ -51,7 +51,7 @@
                 <span asp-validation-for="Phone" class="text-sm text-red-500"></span>
             </div>
             <div>
-                <label asp-for="OrderNotes" class="block text-gray-700">Phone</label>
+                <label asp-for="OrderNotes" class="block text-gray-700">Order Notes</label>
                 <textarea asp-for="OrderNotes" class="w-full p-3 border border-gray-300 rounded-md shadow-sm focus:outline-none focus:ring-2 focus:ring-indigo-500" ></textarea>
                 <span asp-validation-for="OrderNotes" class="text-sm text-red-500"></span>
             </div>
