--- a/QuickBite/Views/Dashboard/OrderDetails.cshtml
+++ b/QuickBite/Views/Dashboard/OrderDetails.cshtml
@@ -10,7 +10,7 @@
         <h1 class="text-2xl font-bold text-gray-800 mb-4">Order Details</h1>
 
         <div class="mb-6">
-            <p><span class="font-semibold">Order Number:</span> @Model.OrderId</p>
+            <p><span class="font-semibold">Order Number:</span> @Model.OrderId.ToString().Substring(Model.OrderId.ToString().Length - 4)</p>
             <p><span class="font-semibold">Order Date:</span> @Model.OrderDate.ToLocalTime()</p>
             <p>
                 <span class="font-semibold">Delivery Address:</span> 
