--- a/QuickBite/Views/Dashboard/Index.cshtml
+++ b/QuickBite/Views/Dashboard/Index.cshtml
@@ -13,13 +13,15 @@ Layout = "_CustomerDashboardLayout";
                 <input placeholder="Search here..." class="bg-gray-100 outline-none" />
             </div>
             <div class="flex items-center gap-4">
-                <a class="bg-orange flex items-center gap-2 rounded-full px-3 py-1 " >
+                <a asp-action="Cart" asp-controller="Dashboard" class="bg-orange flex items-center gap-2 rounded-full px-3 py-1" >
                     <img src="~/icons/cart.png" class="w-4 h-4" alt="search icon" />
-                    <span class="text-white"> 0 </span>
+                    <span class="text-white">
+                        @{
+                            var cartCount = Context.Session.GetInt32("ItemCount") ?? 0;
+                        }
+                        @cartCount
+                    </span>
                 </a>
-                <div class="">
-                    <span class=""> John Doe </span>
-                </div>
             </div>
         </div>
     </div>
