Show orders that are ready for the driver

--- a/QuickBite/Views/Shared/_DeliveryDriverLayout.cshtml
+++ b/QuickBite/Views/Shared/_DeliveryDriverLayout.cshtml
@@ -29,10 +29,11 @@
                            class="text-lg font-medium text-white hover:text-gray-900 transition-colors duration-200">
                             <i class="fas fa-tachometer-alt mr-2"></i>Dashboard
                         </a>
-                        <a href="@Url.Action("AssignedOrders", "DeliveryDriver", new { area = "DeliveryDriver" })"
+                        <a href="@Url.Action("AssignedOrders", "Home", new { area = "DeliveryDriver" })"
                            class="text-lg font-medium text-white hover:text-gray-900 transition-colors duration-200">
                             <i class="fas fa-list-ul mr-2"></i>Assigned Orders
                         </a>
+
                    @*       <a href="@Url.Action("Earnings", "DeliveryDriver", new { area = "DeliveryDriver" })"
                             class="text-lg font-medium text-white hover:text-gray-900 transition-colors duration-200">
                              <i class="fas fa-dollar-sign mr-2"></i>Earnings
