--- a/QuickBite/Views/Shared/_Layout.cshtml
+++ b/QuickBite/Views/Shared/_Layout.cshtml
@@ -7,6 +7,7 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>@ViewData["Title"] - QuickBite</title>
+    <link rel="icon" href="icons/qbLogo.svg" />
     <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.min.css" />
     <link rel="stylesheet" href="~/css/site.css" asp-append-version="true" />
     <link rel="stylesheet" href="~/QuickBite.styles.css" asp-append-version="true" />
