--- a/QuickBite/Areas/Restaurant/Views/Orders/Details.cshtml
+++ b/QuickBite/Areas/Restaurant/Views/Orders/Details.cshtml
@@ -41,16 +41,31 @@
         </tbody>
     </table>
 
-    <h2 class="text-xl font-bold mb-4">Update Order Status</h2>
-    <form asp-action="UpdateStatus" method="post" class="space-y-4">
-        <input type="hidden" name="id" value="@Model.OrderId" />
-        <div class="flex space-x-2">
-            <button type="submit" name="status" value="Approved" class="text-white bg-blue-500 hover:bg-blue-600 font-semibold py-2 px-4 rounded">
-                Mark as Approved
-            </button>
-            <button type="submit" name="status" value="Ready" class="text-white bg-green-500 hover:bg-green-600 font-semibold py-2 px-4 rounded">
-                Mark as Ready
-            </button>
+    @if (Model.OrderStatus == OrderStatus.Confirmed)
+    {
+    <div class="mt-8">
+        <h2 class="text-lg font-bold text-gray-800 mb-4">Customer Feedback</h2>
+        <div class="p-4 bg-gray-50 border border-gray-200 rounded-lg">
+            <p class="text-gray-700">
+                @Model.OrderFeedback
+            </p>
         </div>
-    </form>
+        </div>
+    }
+    else
+    {
+        <h2 class="text-xl font-bold mb-4">Update Order Status</h2>
+        <form asp-action="UpdateStatus" method="post" class="space-y-4">
+            <input type="hidden" name="id" value="@Model.OrderId" />
+            <div class="flex space-x-2">
+                <button type="submit" name="status" value="Approved" class="text-white bg-blue-500 hover:bg-blue-600 font-semibold py-2 px-4 rounded">
+                    Mark as Approved
+                </button>
+                <button type="submit" name="status" value="Ready" class="text-white bg-green-500 hover:bg-green-600 font-semibold py-2 px-4 rounded">
+                    Mark as Ready
+                </button>
+            </div>
+        </form>
+    }
+ 
 </div>
