--- a/QuickBite/Views/Dashboard/OrderDetails.cshtml
+++ b/QuickBite/Views/Dashboard/OrderDetails.cshtml
@@ -92,7 +92,8 @@
             <div class="mt-8">
                 <h2 class="text-lg font-bold text-gray-800 mb-4">Your Feedback</h2>
                 <div class="p-4 bg-gray-50 border border-gray-200 rounded-lg">
-                    <p class="text-gray-700">@Model.OrderNotes</p>
+                    <p class="text-gray-700">@Model.OrderFeedback
+                    </p>
                 </div>
             </div>
         }
