--- a/QuickBite/Views/Shared/_RestaurantLayout.cshtml
+++ b/QuickBite/Views/Shared/_RestaurantLayout.cshtml
@@ -53,7 +53,7 @@
                     <!-- User Account & Mobile Menu -->
                     <div class="flex items-center text-white space-x-6">
                         <div class="hidden md:block">
-                            <partial name="_LoginPartial" />
+                            <a class="text-white" href="/">Go back to Client View</a>
                         </div>
 
                         <!-- Mobile Menu Button -->
