--- a/QuickBite/Areas/Identity/Pages/Account/Manage/_Layout.cshtml
+++ b/QuickBite/Areas/Identity/Pages/Account/Manage/_Layout.cshtml
@@ -9,16 +9,16 @@
     }
 }
 
-<h1>Manage your account</h1>
+<h1 class="text-3xl font-bold mb-4">Manage your account</h1>
 
 <div>
-    <h2>Change your account settings</h2>
-    <hr />
-    <div class="row">
-        <div class="col-md-3">
+    <h2 class="text-2xl font-semibold mb-2">Change your account settings</h2>
+    <hr class="mb-6" />
+    <div class="flex flex-col md:flex-row">
+        <div class="md:w-1/4 mb-6 md:mb-0">
             <partial name="_ManageNav" />
         </div>
-        <div class="col-md-9">
+        <div class="md:w-3/4">
             @RenderBody()
         </div>
     </div>
